--- a/src/scss/components/bio/_bio.scss
+++ b/src/scss/components/bio/_bio.scss
@@ -10,7 +10,7 @@
 @use "../../abstracts/variables" as *;
 @use "../../abstracts/mixins" as *;
 
-.bio-section {
+.bio-page {
   margin: 0 auto;
 
   // Semantic section styling
